language/tests/error/InvalidAssignmentInWhileCond.sl
toeminto double(x) {
  return 2 * x;
}

toeminto piä() {
  while (double(2) = 4) {
    42;
  }
}